--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>Menu</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">Trabajos</a>
-                    <ul>
-                        <li><a href="#">Batata bit</a></li>
-                        <li><a href="#">Clon de google</a></li>
-                        <li><a href="#">Tranajo de la escuela (No terminado)</a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Clases</a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="nav">
+            <li>
+                <a href="#">Trabajos</a>
+                <ul>
+                    <li><a href="cursocsshtml/Batabit/index.html">Batata bit</a></li>
+                    <li><a href="cursocsshtml/Clone de Google/index.html">Clon de google</a></li>
+                    <li><a href="cursocsshtml/ENTIDAD/index.html">Tranajo de la escuela (No terminado)</a></li>
+                    <li><a href="cursocsshtml/blog/index.html">Blog</a></li>
+                    <li><a href="cursocsshtml/trabajodepug/landing.html">Pug</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Clases</a>
+                <ul>
+                    <li><a href="cursocsshtml/clasebotton/index.html">Clase de boton</a></li>
+                    <li><a href="cursocsshtml/clasecalendario/index.html">Clase de calendario</a></li>
+                    <li><a href="cursocsshtml/claseCSS/index.html">Clase de css</a></li>
+                    <li><a href="cursocsshtml/claseEspecifidad/index.html">Clase de especificidad</a></li>
+                    <li><a href="cursocsshtml/claseForm/index.html">Clase de form</a></li>
+                    <li><a href="cursocsshtml/claseHerencia/index.html">Clase de herendia</a></li>
+                    <li><a href="cursocsshtml/claseModelodecajas/index.html">Clase de modelo de cajas</a></li>
+                    <li><a href="cursocsshtml/clasevideo/index.html">Clase de video</a></li>
+                </ul>
+            </li>
+        </ul>
     </header>
-    <menu>
-        
-    </menu>
+    <main>
+
+    </main>
 </body>
 </html>
