Borre sin queres una parte de google clon y tube que reacerlo

--- a/cursocsshtml/Clone de Google/index.html
+++ b/cursocsshtml/Clone de Google/index.html
@@ -25,14 +25,13 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        <section class="main-lo">
+        <section class="main-logo">
             <img src="./imagenes/google_logo.svg" alt=" ">
         </section>
         <section class="main-input">
             <div class="main-input-container">
-                <span class="icon-search"> </span>
+                <span class="search-icon"></span>
                 <input type=" text ">
                 <a href="#" class="micro-icon"> </a>
             </div>
