Haciendo una rama (branch) y guardando los ejercicios parte1

--- a/cursocsshtml/Batabit/index.html
+++ b/cursocsshtml/Batabit/index.html
@@ -150,9 +150,9 @@
 <footer>
     <section class="left">
         <ul>
-            <li><a href="#">Linkedin</a></li>
-            <li><a href="#">Crunchbase</a></li>
-            <li><a href="#">Hackernews</a></li>
+            <li><a href="https://linkedin.com">Linkedin</a></li>
+            <li><a href="https://www.crunchbase.com/">Crunchbase</a></li>
+            <li><a href="https://tetris.com/play-tetris/">Tetris</a></li>
         </ul>
     </section>
     <section class="right">
