--- a/cursocsshtml/Clone de Google/index.html
+++ b/cursocsshtml/Clone de Google/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="Assets/css/style.css">
 </head>
 
 <body>
@@ -26,8 +26,8 @@
         </nav>
     </header>
     <main>
-        <section class="main-logo">
-            <img src="./imagenes/google_logo.svg" alt=" ">
+        <section class="main-logo"><a href="https://www.google.com/">
+            <img src="Assets/imagenes/google_logo.svg" alt=" "></a>
         </section>
         <section class="main-input">
             <div class="main-input-container">
