--- a/cursocsshtml/ENTIDAD/index.html
+++ b/cursocsshtml/ENTIDAD/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,13 +13,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <title>Mi entidad sin fines de lucro</title>
 </head>
+
 <body>
     <header class="navbar">
         <a href="#Entidad">
             ENTIDAD
-        </a> 
+        </a>
         <nav class="navbar--navegacion">
-            <a href="#QS">¿Quienes somos?</a> 
+            <a href="#QS">¿Quienes somos?</a>
             <a href="#Servicios">Servicios</a>
             <a href="#Fotos">Fotos</a>
             <a href="#Contactos">Contacto</a>
@@ -26,42 +28,48 @@
     </header>
     <main>
         <section class="main-content" id="Entidad">
-            <h1 class="main-content__title">UNA ENTIDAD AL SERVICIO DE LA COMUNIDAD <br>
+            <h1 class="main-content__title">UNA ENTIDAD AL SERVICIO DE LA COMUNIDAD
             </h1>
             <p class="line">____</p>
-            <p class="main-content__p">Desde 1950 estamos al servicio de las personas que se acercan con problemas de movilidad y discapacidad</p>
-            <a href="#QS"><button class="main-content__a" >CONOCER MAS!</button></a>
+            <p class="main-content__p">Desde 1950 estamos al servicio de las personas que se acercan con problemas de
+                movilidad y discapacidad</p>
+            <a href="#QS"><button class="main-content__a">CONOCER MAS!</button></a>
         </section>
         <section class="main-information" id="QS">
-            <h2 class="main-information__title">Desde 1950 somos ARAL <br></h2>
+            <h2 class="main-information__title">Desde 1950 somos ARAL</h2>
             <p class="line-black">____</p>
-            <p class="main-information__p">Historia Cruz Roja Argentina está presente en el país desde 1880, cuando situaciones críticas como los conflictos políticos y la epidemia de fiebre amarilla de los años 70 llevaron a Guillermo Rawson y el doctor Toribio Ayerza a crear yba Sociedad Nacional de Cruz Roja Argentina.</p>
-            <a href="#Servicios"><button class="main-information__a" >NUESTROS SERVICIOS!</button></a>
+            <p class="main-information__p">Historia Cruz Roja Argentina está presente en el país desde 1880, cuando
+                situaciones críticas como los conflictos políticos y la epidemia de fiebre amarilla de los años 70
+                llevaron a Guillermo Rawson y el doctor Toribio Ayerza a crear yba Sociedad Nacional de Cruz Roja
+                Argentina.</p>
+            <a href="#Servicios"><button class="main-information__a">NUESTROS SERVICIOS!</button></a>
         </section>
         <section class="main-service" id="Servicios">
-            <h2>Servicios <br></h2>
+            <h2>Servicios</h2>
             <span class="line">____</span>
-            <div class="service__one">
-                <span class="main-service__image"></span>
-                <h2>Alojamiento Nocturno</h2>
-                <p>Brindamos alojamoento a personas de la calle</p>
-            </div>
-            <div class="service__two">
-                <span class="main-service__image"></span>
-                <h2>Primeros auxilios en sectores carenciados</h2>
-            </div>
-            <div class="service__three">
-                <span class="main-service__image"></span>
-                <h2>Alojamiento Nocturno</h2>
-            </div>
-            <div class="service__four">
-                <span class="main-service__image"></span>
-                <h2>Primeros auxilios en sectores carenciados</h2>
-            </div>
+            <section class="main-service__services">
+                <div class="service__one">
+                    <span class="main-service__image"></span>
+                    <h2>Alojamiento Nocturno</h2>
+                    <p>Brindamos alojamoento a personas de la calle</p>
+                </div>
+                <div class="service__two">
+                    <span class="main-service__image"></span>
+                    <h2>Primeros auxilios en sectores carenciados</h2>
+                </div>
+                <div class="service__three">
+                    <span class="main-service__image"></span>
+                    <h2>Alojamiento Nocturno</h2>
+                </div>
+                <div class="service__four">
+                    <span class="main-service__image"></span>
+                    <h2>Primeros auxilios en sectores carenciados</h2>
+                </div>
+            </section>
         </section>
         <section id="Fotos" class="Fotos">
             <img src="./imagenes/pexels-energepiccom-313690.jpg" alt="" class="Foto">
-            <img src="./imagenes/pexels-eugene-golovesov-13085874.jpg" alt=""  class="Foto">
+            <img src="./imagenes/pexels-eugene-golovesov-13085874.jpg" alt="" class="Foto">
             <img src="./imagenes/pexels-jakub-pabis-11074333.jpg" alt="" class="Foto">
             <img src="./imagenes/pexels-karolina-grabowska-4386467.jpg" alt="" class="Foto">
             <img src="./imagenes/pexels-pixabay-356043.jpg" alt="" class="Foto">
@@ -100,4 +108,5 @@
         </div>
     </main>
 </body>
+
 </html>
