--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <header>
-        <h1>Menu</h1>
+<body class="background">
+    <div class="topbar">
+        <h1 class="titulo">Menu</h1>
         <ul class="nav">
             <li>
                 <a href="#">Trabajos</a>
@@ -36,9 +35,12 @@
                 </ul>
             </li>
         </ul>
-    </header>
-    <main>
-
-    </main>
+    </div>
+    <footer>
+        <ul>
+            <li><a href=""></a>@Nacho_Crocetti</li>
+            <li><a href=""></a>Ignaciocrocetti81@gmail.com</li>
+        </ul>
+    </footer>
 </body>
 </html>
