--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             </li>
         </ul>
     </div>
-    <footer>
+    <div class="bottombar">
         <ul>
-            <li><a href=""></a>@Nacho_Crocetti</li>
-            <li><a href=""></a>Ignaciocrocetti81@gmail.com</li>
+            <li><a href="https://www.instagram.com/nacho_crocetti/">@Nacho_Crocetti</a></li>
+            <li>Ignaciocrocetti81@gmail.com</li>
         </ul>
-    </footer>
+    </div>
 </body>
 </html>
